Revise README for President og Boms project setup
Updated project description and prerequisites for JavaFX implementation of the card game President og Boms. Added project structure, dependencies, and instructions for running the project.